# Taro

./: .editorconfig  .env.example  .gitignore  ALEMBIC.md  DEPLOYMENT_DAILY.md  DEPLOYMENT_WEB.md  Dockerfile.prod  README.md  alembic.ini  docker-compose.prod.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/actions/deploy-composite/: action.yml
.github/workflows/: ci.yml  deploy.yml
deploy_service/: deploy_service.sh  generate_service.py  paths.py  remove_service.sh
deploy_service/service_templates/: taro_daily.service.mako  taro_web.service.mako
src/taro/: __main__.py  configs.py  paths.py  utils.py
src/taro/analysis/: __init__.py  app.py  models.py
src/taro/analysis/application/: metrics_service.py
src/taro/analysis/domain/: models.py
src/taro/bokeh_figures/: price_volumn.py
src/taro/cli/: __main__.py  sub_cli.py  taro_backfill_cli.py  taro_daemon_cli.py  taro_daily_cli.py  taro_drop_cli.py  taro_query_cli.py  taro_web_cli.py  taro_web_prod_bokeh_cli.py  taro_web_prod_flask_cli.py
src/taro/data_loaders/: __init__.py  daily_metrics.py  fundamental_data.py  market_data.py  options_data.py  technical_indicators.py
src/taro/db/: create_db.py  models.py
src/taro/fetcher/: fetcher_yfinance.py
src/taro/migrations/: __init__.py  env.py
src/taro/tickersync/: __init__.py  app.py  models.py
tests/: conftest.py  db_config.py  test_essentials.py  test_fetcher_yfinance.py  test_fundamental_metric.py  test_models.py  test_postgress.py
waste_code/: deploy-ci.yml  deploy.yml  price_volumn.py
(+9 files in other folders)
